Update Metis #5 Writeup.ipynb

--- a/Metis #5 Writeup.ipynb
+++ b/Metis #5 Writeup.ipynb
@@ -42,7 +42,7 @@
     "- New York Times API and Requests for data acquisition\n",
     "- BeautifulSoup, Numpy, Pandas, SpaCy for data cleaning and preprocessing\n",
     "- LDA, NMF and CorEx for topic modeling\n",
-    "- Seaborn/Matplotlib for data visualizations\n",
+    "- Seaborn/Matplotlib and Tableau for data visualizations\n",
     "***\n",
     "### Communication\n",
     "\n",
