Update Metis #5 Writeup.ipynb

--- a/Metis #5 Writeup.ipynb
+++ b/Metis #5 Writeup.ipynb
@@ -46,7 +46,7 @@
     "***\n",
     "### Communication\n",
     "\n",
-    "The presentation for this project is saved in this project's repo."
+    "The presentation for this project is saved in this project's repo. The visualization created in Tableau is saved <a href=\"https://public.tableau.com/app/profile/chloe.bergsma.safar/viz/ChartforMetis5Project-NLPandUnsupervisedLearning/ofDocsperTopicDash?publish=yes">here</a>."
    ]
   }
  ],
